# scion

./: .bazelignore  .bazelrc  .bazelrc_ci  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .golangcilint.yml  .markdownlint-cli2.jsonc  .mypy.ini  .readthedocs.yaml  .semgrepignore  ADRelationships  ADToISD  AsRelationship  AsToTD  BUILD.bazel  CONTRIBUTING.md  CRYPTO_README.md  DESIGN.md  Dockerfile  MANIFEST.in  MODULE.bazel  Makefile  PEERING_REVIEW_SUMMARY.txt  PROPOSAL.md  README.md  TESTING.md  WORKSPACE  WORKSPACE.bzlmod  antlr.bzl  bazel-remote.yml  bbcp.bzl  brs.txt  buf.gen.yaml  buf.yaml  build-in-tmp.sh  circle.yml  (+42 more)
acceptance/: BUILD.bazel  README.md  Readme.md  color.sh  common.sh  ctl  lib.sh  run  sigcmn.go
acceptance/app_vs_endhost_br_dispatch/: BUILD.bazel  test.py
acceptance/brA_acceptance/: test
acceptance/brB_acceptance/: test
acceptance/brC_acceptance/: test
acceptance/brD_acceptance/: test
acceptance/br_bfd_acceptance/: dc.yml  test
acceptance/br_child_acceptance/: test
acceptance/br_core_childIf_acceptance/: test
acceptance/br_core_coreIf_acceptance/: test
acceptance/br_core_multi_acceptance/: test
acceptance/br_multi_acceptance/: dc.yml  test
acceptance/br_parent_acceptance/: test
acceptance/br_peer_acceptance/: test
acceptance/brutil/: common.sh  docker-compose.yml  util.sh
acceptance/bs_add_link/: test
acceptance/bs_add_link_acceptance/: test
acceptance/cert_renewal/: BUILD.bazel  test.py
acceptance/cert_renewal_acceptance/: test  test.py
acceptance/cert_renewal_acceptance_disabled/: test
acceptance/common/: BUILD.bazel  README.md  base.py  docker.py  go.py  log.py  raw.bzl  scion.py  scion_test.py  slot.py  test.py  (+3 more)
control/: BUILD.bazel  hiddenpaths.go  ignore.go  messaging.go  observability.go  policy.go  registration.go  registration_test.go  revhandler.go  tasks.go  trust.go  trust_test.go
daemon/: BUILD.bazel  daemon.go  daemon_test.go
dispatcher/: BUILD.bazel  dispatcher.go  dispatcher_test.go  table.go  underlay.go  underlay_test.go
doc/: .markdownlint-cli2.jsonc  .readthedocs.yaml  BUILD.bazel  Beacon Extensions Design Doc.md  BeaconExtensions.md  BeaconExtensionsAlternate  BeaconExtensionsAlternate.md  BeaconService.md  BorderRouter.md  BorderRouter.rst  CASA.rst  CertificateRenewal.md  ColibriDesign.rst  ColibriService.md  ControlPlanePKI.md  DRKeyInfra.md  EPIC.md  EndhostBootstrap.rst  Environments.md  ForwardingKeyRollover.md  HiddenPaths.md  Makefile  Metrics.md  PathPolicy.md  PathReversal.md  PathService.md  RevocationAuthentication.md  SAPV.md  StaticInfo.md  addressing.txt  beacon-metadata.rst  code_of_conduct.md  conf.py  contribute.rst  control-plane.rst  data-plane.rst  deps.bzl  endhost-bootstrap.rst  extension-header.rst  glossary.rst  (+11 more)
docker/: BUILD.bazel  Dockerfile  Dockerfile.app  Dockerfile.base  Dockerfile.full  Dockerfile.tester  Makefile  README.md  cache.sh  caps.bzl  ci_run  deps_check  docker-compose.yml  docker-entrypoint.sh  init.sh  integration_test.sh  integration_tests.sh  labels.bzl  pkgs_preinstall.txt  pkgs_purge.txt  pkgs_purge_essential.txt  profile  scion_app.bzl  screenrc  setcap.sh.tpl  sig_tester.bzl  tester.bzl  tester.sh  tester_deb.lock.json  tester_deb.yaml  tester_packages.yaml  tester_snapshots.yaml  zoo-container.cfg  zoo.cfg
gateway/: BUILD.bazel  dataplane.go  gateway.go  loader.go  loader_test.go  metrics.go  pathmonitor.go  watcher.go
hbird/: BUILD.bazel  coloring_test.go  observability.go  resid.go  resid_test.go
proto/: BUILD.bazel  ack.capnp  asm_exts.capnp  blobsign.capnp  cert_mgmt.capnp  cert_reply.capnp  cert_req.capnp  colibri.capnp  colibri_mgmt.capnp  common.capnp  ctrl_extn.capnp  ctrl_pld.capnp  drkey_mgmt.capnp  hidden_path_mgmt.capnp  hp_cfg.capnp  hp_mgmt.capnp  if_state.capnp  ifid.capnp  path_mgmt.capnp  path_policy.capnp  path_seg.capnp  pathseg.capnp  pcb.capnp  rev_info.capnp  rpc.capnp  scion.capnp  sciond.capnp  scmp_auth_mgmt.capnp  seg_recs.capnp  seg_req.capnp  set_info.capnp  sibra.capnp  sig.capnp  sign.capnp  svc_resolution.capnp  trc_reply.capnp  trc_req.capnp  zkid.capnp
router/: #connector.go#  BUILD.bazel  connector.go  dataplane.go  dataplane_hbird.go  dataplane_hbird_test.go  dataplane_internal_test.go  dataplane_test.go  dataplane_testhooks.go  doc.go  export_test.go  fnv1aCheap.go  fnv1acheap.go  metrics.go  metrics_processing.go  metrics_processing_stub.go  metrics_processing_stub_test.go  metrics_processing_test.go  serializeProxy.go  serialize_proxy.go  svc.go  svc_test.go  underlay.go  underlay_import_test.go
scion-pki/: BUILD.bazel  flags.go  plugin.go
spec/: BUILD.bazel  Makefile  ca.gen.yml  control.gen.yml  control.yml  cppki.gen.yml  daemon.gen.yml  dispatcher.gen.yml  gateway.gen.yml  health.gen.yml  install.bzl  repositories.bzl  router.gen.yml  segments.gen.yml  spec.bzl
tools/: BUILD.bazel  await-connectivity  bazel  bazel-build-env  dc  dc.sh  docker-ip  fetch.sh  git-version  go.bzl  godeps.py  godeps.sh  gomocks  gomocks.py  gzip_exec_interp  install_bazel  install_deps  install_docker  jaeger_ui.sh  licensechecker.py  licenses.sh  linkfarm.sh  lint  lint.sh  mdlint  mdlint_skipped  mocks.sh  openwrt_gzip_exec  package-version  pktcap  pktgen.py  pktprint.py  pp.py  quiet  set_ipv6_addr.py  setcap  supervisor.sh  supervisorctl.py  supervisord.conf  supervisord.py  (+7 more)
topology/: ADConfigurations.json  ADConfigurations_1000.json  ADConfigurations_250.json  ADConfigurations_255.json  ADRelationships  ADToISD  BUILD.bazel  CSGO.topo  Default.locations  Default.topo  FidelityTest.json  FidelityTestLength.json  FidelityTestPeer.json  Makefile  MultiPathTest.json  PathPolicy.json  PathPolicy.yml  README.md  Testbed.topo  Tiny.topo  Tiny4.topo  TinyConfig.json  Two.topo  Wide.locations  Wide.topo  Zookeeper.json  Zookeeper.log4j  Zookeeper.yml  caida_tier_1s.topo  caida_tier_1s_ia_as_map.yml  default-no-peers.topo  default.topo  default4.topo  fully_connected_3c.topo  fully_connected_5c.topo  gen_test.py  generator.cc  generator.h  generator.py  gentopo.py  (+25 more)
(+9890 files in other folders)
