load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["sigcmn.go"],
    importpath = "github.com/scionproto/scion/acceptance",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/snet:go_default_library",
        "//tools/integration:go_default_library",
    ],
)
