load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hiddenpaths.go",
        "messaging.go",
        "observability.go",
        "policy.go",
        "revhandler.go",
        "tasks.go",
        "trust.go",
    ],
    importpath = "github.com/scionproto/scion/control",
    visibility = ["//visibility:public"],
    deps = [
        "//control/beacon:go_default_library",
        "//control/beaconing:go_default_library",
        "//control/beaconing/grpc:go_default_library",
        "//control/config:go_default_library",
        "//control/drkey:go_default_library",
        "//control/ifstate:go_default_library",
        "//control/segreq:go_default_library",
        "//control/trust:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/experimental/hiddenpath:go_default_library",
        "//pkg/experimental/hiddenpath/grpc:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/metrics/v2:go_default_library",
        "//pkg/private/ctrl/path_mgmt:go_default_library",
        "//pkg/private/prom:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/proto/hidden_segment:go_default_library",
        "//pkg/scrypto:go_default_library",
        "//pkg/scrypto/cppki:go_default_library",
        "//pkg/segment:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/addrutil:go_default_library",
        "//pkg/snet/metrics:go_default_library",
        "//private/ca/renewal:go_default_library",
        "//private/config:go_default_library",
        "//private/discovery:go_default_library",
        "//private/env:go_default_library",
        "//private/keyconf:go_default_library",
        "//private/pathdb:go_default_library",
        "//private/periodic:go_default_library",
        "//private/revcache:go_default_library",
        "//private/segment/seghandler:go_default_library",
        "//private/segment/verifier:go_default_library",
        "//private/service:go_default_library",
        "//private/topology:go_default_library",
        "//private/trust:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["trust_test.go"],
    data = glob(["testdata/**"]),
    deps = [
        ":go_default_library",
        "//pkg/addr:go_default_library",
        "//private/app/command:go_default_library",
        "//private/storage/trust/sqlite:go_default_library",
        "//scion-pki/testcrypto:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
