load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["daemon.go"],
    importpath = "github.com/scionproto/scion/daemon",
    visibility = ["//visibility:public"],
    deps = [
        "//daemon/drkey:go_default_library",
        "//daemon/fetcher:go_default_library",
        "//daemon/internal/servers:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/private/prom:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//private/env:go_default_library",
        "//private/revcache:go_default_library",
        "//private/trust:go_default_library",
        "//private/trust/grpc:go_default_library",
        "//private/trust/metrics:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["daemon_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
