load("@rules_go//go:def.bzl", "go_library")
load("//tools:go.bzl", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["daemon.go"],
    importpath = "github.com/scionproto/scion/daemon",
    visibility = ["//visibility:public"],
    deps = [
        "//daemon/grpc:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/daemon/asinfo:go_default_library",
        "//pkg/daemon/fetcher:go_default_library",
        "//pkg/daemon/private/engine:go_default_library",
        "//private/drkey:go_default_library",
        "//private/env:go_default_library",
        "//private/revcache:go_default_library",
        "//private/trust:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["daemon_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
