load("//tools/lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dispatcher.go"],
    importpath = "github.com/scionproto/scion/dispatcher",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path/epic:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//private/topology:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
    ],
)
